refactor(middleware) refatorando middlewares de funcionarios
